# quantum-primes

./: pyproject.toml  quantum_primes_v1.tex
paper/: quantum_primes_v1.tex
src/quantum_primer/: __init__.py  cli.py  compiler.py  factorizations.py  hardware.py  primes.py
tests/: test_quantum_primer.py
