[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-primer"
version = "0.1.0"
description = "Quantum Primes: Hardware-agnostic quantum compilation via irreducible primitives"
license = {text = "MIT"}
authors = [{name = "Michael Bieg", email = "Bieg.Michael@web.de"}]
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]
dev = ["pytest"]

[project.scripts]
quantum-prime = "quantum_primer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
